test/output/err/ft_compile_vector_it_def_err.cpp.err
src/vector/it_def_err.cpp:18:7: error: cannot assign to return value because function 'operator*' returns a const value
        *ite = 42; // < -- error
        ~~~~ ^
src/vector/it_def_err.cpp:24:2: note: in instantiation of function template specialization 'test<ft::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
.././iterator/random_access_iterator.hpp:58:13: note: function 'operator*' which returns const-qualified type 'ft::random_access_iterator<const int>::reference' (aka 'const int &') declared here
            reference       operator*(void) const { return (*it); }
            ^~~~~~~~~
1 error generated.
